// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toaster renders correctly with all kind of toast 1`] = `
.cache-10an7cj-StyledText {
  font-size: 14px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<span
  class="cache-10an7cj-StyledText e13y3mga0"
>
  This is an info
</span>
`;

exports[`Toaster renders correctly with all kind of toast 2`] = `
.cache-10an7cj-StyledText {
  font-size: 14px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<span
  class="cache-10an7cj-StyledText e13y3mga0"
>
  This is a success
</span>
`;

exports[`Toaster renders correctly with all kind of toast 3`] = `
.cache-10an7cj-StyledText {
  font-size: 14px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<span
  class="cache-10an7cj-StyledText e13y3mga0"
>
  This is an error
</span>
`;

exports[`Toaster renders correctly with all kind of toast 4`] = `
.cache-10an7cj-StyledText {
  font-size: 14px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<span
  class="cache-10an7cj-StyledText e13y3mga0"
>
  This is a warning
</span>
`;

exports[`Toaster renders correctly with all kind of toast 5`] = `
<DocumentFragment>
  .cache-tb58o0-toast {
  border-radius: 4px;
  min-height: 52px;
}

.cache-tb58o0-toast .Toastify__toast-container {
  width: 344px;
}

.cache-tb58o0-toast .Toastify__toast-body {
  margin: 0;
  padding: 0;
}

.cache-tb58o0-toast.Toastify__toast--success {
  background-color: #151a2d;
  color: #ffffff;
  padding: 16px;
}

.cache-tb58o0-toast.Toastify__toast--info {
  background-color: #0078d2;
  color: #ffffff;
  padding: 16px;
}

.cache-tb58o0-toast.Toastify__toast--error {
  background-color: #e51963;
  color: #ffffff;
  padding: 16px;
}

.cache-tb58o0-toast.Toastify__toast--warning {
  background-color: #fbc600;
  color: #222638;
  padding: 16px;
}

.cache-4lkpn5-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-10an7cj-StyledText {
  font-size: 14px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-bxz4s9-StyledFilledButton-StyledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 24px;
  padding: 0 4px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 4px;
  border-radius: 4px;
  box-sizing: border-box;
  width: 24px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  paragraph-spacing: 0;
  text-case: none;
  background: #0078d2;
  border: none;
  color: #ffffff;
  background: none;
  margin: auto;
}

.cache-bxz4s9-StyledFilledButton-StyledButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-bxz4s9-StyledFilledButton-StyledButton:active {
  box-shadow: 0px 0px 0px 3px #71c2ff40;
}

.cache-bxz4s9-StyledFilledButton-StyledButton:hover,
.cache-bxz4s9-StyledFilledButton-StyledButton:active {
  background: #0071c5;
  color: #f9f9fa;
}

.cache-bxz4s9-StyledFilledButton-StyledButton:hover,
.cache-bxz4s9-StyledFilledButton-StyledButton:active {
  background: none;
}

.cache-1dnbbhk-StyledIcon-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.cache-1dnbbhk-StyledIcon-sizeStyles .fillStroke {
  stroke: currentColor;
  fill: none;
}

.cache-1f92tvm-StyledFilledButton-StyledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 24px;
  padding: 0 4px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 4px;
  border-radius: 4px;
  box-sizing: border-box;
  width: 24px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  paragraph-spacing: 0;
  text-case: none;
  background: #2c8564;
  border: none;
  color: #ffffff;
  background: none;
  margin: auto;
}

.cache-1f92tvm-StyledFilledButton-StyledButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-1f92tvm-StyledFilledButton-StyledButton:active {
  box-shadow: 0px 0px 0px 3px #45d19f40;
}

.cache-1f92tvm-StyledFilledButton-StyledButton:hover,
.cache-1f92tvm-StyledFilledButton-StyledButton:active {
  background: #297c5e;
  color: #f9f9fa;
}

.cache-1f92tvm-StyledFilledButton-StyledButton:hover,
.cache-1f92tvm-StyledFilledButton-StyledButton:active {
  background: none;
}

.cache-pdtx3m-StyledFilledButton-StyledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 24px;
  padding: 0 4px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 4px;
  border-radius: 4px;
  box-sizing: border-box;
  width: 24px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  paragraph-spacing: 0;
  text-case: none;
  background: #e51963;
  border: none;
  color: #ffffff;
  background: none;
  margin: auto;
}

.cache-pdtx3m-StyledFilledButton-StyledButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-pdtx3m-StyledFilledButton-StyledButton:active {
  box-shadow: 0px 0px 0px 3px #f91b6c40;
}

.cache-pdtx3m-StyledFilledButton-StyledButton:hover,
.cache-pdtx3m-StyledFilledButton-StyledButton:active {
  background: #d6175c;
  color: #f9f9fa;
}

.cache-pdtx3m-StyledFilledButton-StyledButton:hover,
.cache-pdtx3m-StyledFilledButton-StyledButton:active {
  background: none;
}

.cache-bg2khf-StyledFilledButton-StyledButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 24px;
  padding: 0 4px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 4px;
  border-radius: 4px;
  box-sizing: border-box;
  width: 24px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 20px;
  paragraph-spacing: 0;
  text-case: none;
  background: #fbc600;
  border: none;
  color: #222638;
  background: none;
  margin: auto;
}

.cache-bg2khf-StyledFilledButton-StyledButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-bg2khf-StyledFilledButton-StyledButton:active {
  box-shadow: 0px 0px 0px 3px #fbc60040;
}

.cache-bg2khf-StyledFilledButton-StyledButton:hover,
.cache-bg2khf-StyledFilledButton-StyledButton:active {
  background: #ebb200;
  color: #151a2d;
}

.cache-bg2khf-StyledFilledButton-StyledButton:hover,
.cache-bg2khf-StyledFilledButton-StyledButton:active {
  background: none;
}

<div
    class="Toastify"
    id="toaster"
  >
    <div
      class="Toastify__toast-container Toastify__toast-container--top-right"
    >
      <div
        class="Toastify__toast Toastify__toast-theme--light Toastify__toast--info cache-tb58o0-toast Toastify--animate Toastify__slide-enter--top-right Toastify__toast--stacked"
        data-collapsed="true"
        data-in="true"
        data-pos="top"
        id="info"
        style="--y: 0px; --g: 12; --s: 0.925;"
      >
        <div
          class="Toastify__toast-body"
          role="alert"
        >
          <div>
            <div
              class="cache-4lkpn5-Stack ehpbis70"
            >
              <span
                class="cache-10an7cj-StyledText e13y3mga0"
              >
                This is an info
              </span>
            </div>
          </div>
        </div>
        <button
          aria-label="close"
          class="e1eb63990 cache-bxz4s9-StyledFilledButton-StyledButton e112qvla2"
          type="button"
        >
          <svg
            class="cache-1dnbbhk-StyledIcon-sizeStyles e17h3kg70"
            viewBox="0 0 16 16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5.28 4.22a.75.75 0 0 0-1.06 1.06L6.94 8l-2.72 2.72a.75.75 0 1 0 1.06 1.06L8 9.06l2.72 2.72a.75.75 0 1 0 1.06-1.06L9.06 8l2.72-2.72a.75.75 0 0 0-1.06-1.06L8 6.94z"
            />
          </svg>
        </button>
        <div
          class="Toastify__progress-bar--wrp"
          data-hidden="true"
        >
          <div
            class="Toastify__progress-bar--bg Toastify__progress-bar-theme--light Toastify__progress-bar--info"
          />
          <div
            aria-hidden="true"
            aria-label="notification timer"
            class="Toastify__progress-bar Toastify__progress-bar--animated Toastify__progress-bar-theme--light Toastify__progress-bar--info"
            role="progressbar"
            style="animation-duration: 6000ms; animation-play-state: paused;"
          />
        </div>
      </div>
      <div
        class="Toastify__toast Toastify__toast-theme--light Toastify__toast--success cache-tb58o0-toast Toastify--animate Toastify__slide-enter--top-right Toastify__toast--stacked"
        data-collapsed="true"
        data-in="true"
        data-pos="top"
        id="success"
        style="--y: 0px; --g: 12; --s: 0.95;"
      >
        <div
          class="Toastify__toast-body"
          role="alert"
        >
          <div>
            <div
              class="cache-4lkpn5-Stack ehpbis70"
            >
              <span
                class="cache-10an7cj-StyledText e13y3mga0"
              >
                This is a success
              </span>
            </div>
          </div>
        </div>
        <button
          aria-label="close"
          class="e1eb63990 cache-1f92tvm-StyledFilledButton-StyledButton e112qvla2"
          type="button"
        >
          <svg
            class="cache-1dnbbhk-StyledIcon-sizeStyles e17h3kg70"
            viewBox="0 0 16 16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5.28 4.22a.75.75 0 0 0-1.06 1.06L6.94 8l-2.72 2.72a.75.75 0 1 0 1.06 1.06L8 9.06l2.72 2.72a.75.75 0 1 0 1.06-1.06L9.06 8l2.72-2.72a.75.75 0 0 0-1.06-1.06L8 6.94z"
            />
          </svg>
        </button>
        <div
          class="Toastify__progress-bar--wrp"
          data-hidden="true"
        >
          <div
            class="Toastify__progress-bar--bg Toastify__progress-bar-theme--light Toastify__progress-bar--success"
          />
          <div
            aria-hidden="true"
            aria-label="notification timer"
            class="Toastify__progress-bar Toastify__progress-bar--animated Toastify__progress-bar-theme--light Toastify__progress-bar--success"
            role="progressbar"
            style="animation-duration: 6000ms; animation-play-state: paused;"
          />
        </div>
      </div>
      <div
        class="Toastify__toast Toastify__toast-theme--light Toastify__toast--error cache-tb58o0-toast Toastify--animate Toastify__slide-enter--top-right Toastify__toast--stacked"
        data-collapsed="true"
        data-in="true"
        data-pos="top"
        id="error"
        style="--y: 0px; --g: 12; --s: 0.975;"
      >
        <div
          class="Toastify__toast-body"
          role="alert"
        >
          <div>
            <div
              class="cache-4lkpn5-Stack ehpbis70"
            >
              <span
                class="cache-10an7cj-StyledText e13y3mga0"
              >
                This is an error
              </span>
            </div>
          </div>
        </div>
        <button
          aria-label="close"
          class="e1eb63990 cache-pdtx3m-StyledFilledButton-StyledButton e112qvla2"
          type="button"
        >
          <svg
            class="cache-1dnbbhk-StyledIcon-sizeStyles e17h3kg70"
            viewBox="0 0 16 16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5.28 4.22a.75.75 0 0 0-1.06 1.06L6.94 8l-2.72 2.72a.75.75 0 1 0 1.06 1.06L8 9.06l2.72 2.72a.75.75 0 1 0 1.06-1.06L9.06 8l2.72-2.72a.75.75 0 0 0-1.06-1.06L8 6.94z"
            />
          </svg>
        </button>
        <div
          class="Toastify__progress-bar--wrp"
          data-hidden="true"
        >
          <div
            class="Toastify__progress-bar--bg Toastify__progress-bar-theme--light Toastify__progress-bar--error"
          />
          <div
            aria-hidden="true"
            aria-label="notification timer"
            class="Toastify__progress-bar Toastify__progress-bar--animated Toastify__progress-bar-theme--light Toastify__progress-bar--error"
            role="progressbar"
            style="animation-duration: 6000ms; animation-play-state: paused;"
          />
        </div>
      </div>
      <div
        class="Toastify__toast Toastify__toast-theme--light Toastify__toast--warning cache-tb58o0-toast Toastify--animate Toastify__slide-enter--top-right Toastify__toast--stacked"
        data-in="true"
        data-pos="top"
        id="warning"
        style="--y: 0px; --g: 12; --s: 1;"
      >
        <div
          class="Toastify__toast-body"
          role="alert"
        >
          <div>
            <div
              class="cache-4lkpn5-Stack ehpbis70"
            >
              <span
                class="cache-10an7cj-StyledText e13y3mga0"
              >
                This is a warning
              </span>
            </div>
          </div>
        </div>
        <button
          aria-label="close"
          class="e1eb63990 cache-bg2khf-StyledFilledButton-StyledButton e112qvla2"
          type="button"
        >
          <svg
            class="cache-1dnbbhk-StyledIcon-sizeStyles e17h3kg70"
            viewBox="0 0 16 16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5.28 4.22a.75.75 0 0 0-1.06 1.06L6.94 8l-2.72 2.72a.75.75 0 1 0 1.06 1.06L8 9.06l2.72 2.72a.75.75 0 1 0 1.06-1.06L9.06 8l2.72-2.72a.75.75 0 0 0-1.06-1.06L8 6.94z"
            />
          </svg>
        </button>
        <div
          class="Toastify__progress-bar--wrp"
          data-hidden="true"
        >
          <div
            class="Toastify__progress-bar--bg Toastify__progress-bar-theme--light Toastify__progress-bar--warning"
          />
          <div
            aria-hidden="true"
            aria-label="notification timer"
            class="Toastify__progress-bar Toastify__progress-bar--animated Toastify__progress-bar-theme--light Toastify__progress-bar--warning"
            role="progressbar"
            style="animation-duration: 6000ms; animation-play-state: paused;"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
